kubernetes/inventory-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
        - name: inventory
          image: inventory-service:latest
          imagePullPolicy: Never  # Para usar imágenes locales en minikube
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /ping
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /ping
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
