kubernetes/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: user-service:latest
          imagePullPolicy: Never  # Para usar imágenes locales en minikube
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /welcome/health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /welcome/health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
